==> ycsin/zephyr/drivers/pwm/pwm_max32.c <==
#define DT_DRV_COMPAT adi_max32_pwm
#include <errno.h>
#include <zephyr/drivers/clock_control/adi_max32_clock_control.h>
#include <zephyr/intc2.h>
#include <zephyr/drivers/pwm.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/sys/util_macro.h>
#include <wrap_max32_tmr.h>
#include <zephyr/logging/log.h>
#include <zephyr/drivers/pwm/pwm_utils.h>
#include <zephyr/irq.h>
#include <zephyr/spinlock.h>
#define MAX32_PWM_CH 0

static void pwm_max32_isr(const struct device *dev)
{
	const struct max32_pwm_config *cfg = dev->config;
	struct max32_pwm_data *data = dev->data;

	MXC_TMR_ClearFlags(cfg->regs);
	Wrap_MXC_TMR_ClearWakeupFlags(cfg->regs);

	pwm_fire_event_callbacks(&data->event_callbacks, dev, MAX32_PWM_CH, PWM_EVENT_TYPE_PERIOD);
}

static int pwm_max32_init(const struct device *dev)
{
	int ret = 0;
	const struct max32_pwm_config *cfg = dev->config;

	ret = pinctrl_apply_state(cfg->pctrl, PINCTRL_STATE_DEFAULT);
	if (ret) {
		LOG_ERR("PWM pinctrl initialization failed (%d)", ret);
	}

#ifdef CONFIG_PWM_EVENT
	cfg->irq_config_func(dev);
#endif /* CONFIG_PWM_EVENT */

	return ret;
}
