==> ycsin/zephyr/drivers/pwm/pwm_stm32.c <==
#define DT_DRV_COMPAT st_stm32_pwm
#include <errno.h>
#include <soc.h>
#include <stm32_ll_rcc.h>
#include <stm32_ll_tim.h>
#include <zephyr/drivers/pwm.h>
#include <zephyr/intc2.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/drivers/reset.h>
#include <zephyr/device.h>
#include <zephyr/kernel.h>
#include <zephyr/init.h>
#include <zephyr/drivers/clock_control/stm32_clock_control.h>
#include <zephyr/dt-bindings/pwm/stm32_pwm.h>
#include <zephyr/logging/log.h>
#include <zephyr/irq.h>
#define STM32_TIM_OCIDLESTATE_RESET	LL_TIM_OCIDLESTATE_RESET
#define STM32_TIM_OCIDLESTATE_SET	LL_TIM_OCIDLESTATE_SET
#define STM32_TIM_ACTIVEINPUT_DIRECT	LL_TIM_ACTIVEINPUT_DIRECT
#define STM32_TIM_ACTIVEINPUT_INDIRECT	LL_TIM_ACTIVEINPUT_INDIRECT
#define STM32_TIM_OCIDLESTATE_RESET	LL_TIM_OCIDLESTATE_LOW
#define STM32_TIM_OCIDLESTATE_SET	LL_TIM_OCIDLESTATE_HIGH
#define STM32_TIM_ACTIVEINPUT_DIRECT	LL_TIM_ACTIVEINPUT_DIRECTTI
#define STM32_TIM_ACTIVEINPUT_INDIRECT	LL_TIM_ACTIVEINPUT_INDIRECTTI
#define IS_TIM_32B_COUNTER_INSTANCE(INSTANCE) (0)
#define HAS_MASTERMODE_SUPPORT 1
#define HAS_MASTERMODE_SUPPORT 0
#define IS_TIM_MASTER_INSTANCE(INSTANCE) 0
#define SKIPPED_PWM_CAPTURES 2u
#define TIMER_HAS_6CH 1
#define TIMER_MAX_CH 6u
#define TIMER_HAS_6CH 0
#define TIMER_MAX_CH 4u

static void pwm_stm32_isr(const struct device *dev)
{
	const struct pwm_stm32_config *cfg = dev->config;
	TIM_TypeDef *timer = cfg->timer;
	struct pwm_stm32_data *data = dev->data;
	struct pwm_stm32_capture_data *cpt = &data->capture;
	uint8_t channel = cpt->channel;
	int status = 0;

	if (cpt->skip_irq != 0u) {
		if (LL_TIM_IsActiveFlag_UPDATE(timer)) {
			LL_TIM_ClearFlag_UPDATE(timer);
		}

		if (LL_TIM_IsActiveFlag_CC1(timer)
				|| LL_TIM_IsActiveFlag_CC2(timer)
				|| LL_TIM_IsActiveFlag_CC3(timer)
				|| LL_TIM_IsActiveFlag_CC4(timer)) {
			LL_TIM_ClearFlag_CC1(timer);
			LL_TIM_ClearFlag_CC2(timer);
			LL_TIM_ClearFlag_CC3(timer);
			LL_TIM_ClearFlag_CC4(timer);
			cpt->skip_irq--;
		}

		return;
	}

	if (LL_TIM_IsActiveFlag_UPDATE(timer)) {
		LL_TIM_ClearFlag_UPDATE(timer);
		if (cfg->four_channel_capture_support &&
				cpt->state == CAPTURE_STATE_WAIT_FOR_UPDATE_EVENT) {
			/* Special handling of UPDATE event in case it's triggered */
			cpt->state = CAPTURE_STATE_WAIT_FOR_PERIOD_END;
		} else {
			cpt->overflows++;
		}
	}

	if (!cfg->four_channel_capture_support) {
		if (is_capture_active[channel - 1](timer) ||
		    is_capture_active[complementary_channel[channel - 1] - 1](timer)) {
			clear_capture_interrupt[channel - 1](timer);
			clear_capture_interrupt
					[complementary_channel[channel - 1] - 1](timer);

			cpt->period = get_channel_capture[channel - 1](timer);
			cpt->pulse = get_channel_capture
					[complementary_channel[channel - 1] - 1](timer);
		}
	} else {
		if (cpt->state == CAPTURE_STATE_WAIT_FOR_PULSE_START &&
		    is_capture_active[channel - 1](timer)) {
			/* Reset the counter manually instead of automatically by HW
			 * This sets the pulse-start at 0 and makes the pulse-end
			 * and period related to that number. Sure we loose some
			 * accuracy but it's within acceptable range.
			 *
			 * This is done through an UPDATE event to also reset
			 * the prescalar. This could look like an overflow event
			 * and might therefore require special handling.
			 */
			cpt->state = CAPTURE_STATE_WAIT_FOR_UPDATE_EVENT;
			LL_TIM_GenerateEvent_UPDATE(timer);

		} else if ((cpt->state == CAPTURE_STATE_WAIT_FOR_UPDATE_EVENT ||
				cpt->state == CAPTURE_STATE_WAIT_FOR_PERIOD_END) &&
			    is_capture_active[channel - 1](timer)) {
			cpt->state = CAPTURE_STATE_IDLE;
			/* The end of the period. Both capture channels should now contain
			 * the timer value when the pulse and period ended respectively.
			 */
			cpt->pulse = get_channel_capture[complementary_channel[channel - 1] - 1]
					(timer);
			cpt->period = get_channel_capture[channel - 1](timer);
			/* Reset the counter manually for next cycle */
			LL_TIM_GenerateEvent_UPDATE(timer);
		}

		clear_capture_interrupt[channel - 1](timer);

		if (cpt->state != CAPTURE_STATE_IDLE) {
			/* Still waiting for a complete capture */
			return;
		}
	}

	if (cpt->overflows) {
		status = -ERANGE;
	}

	if (!cpt->continuous) {
		pwm_stm32_disable_capture(dev, channel);
	} else {
		cpt->overflows = 0u;
		cpt->state = CAPTURE_STATE_WAIT_FOR_PERIOD_END;
	}

	/*
	 * Compensate input capture prescaler by right-shifting the measured period.
	 * prescaler_bits: 0..3 correspond to division by 1, 2, 4 or 8.
	 * Pulse measurement enforces prescaler_bits == 0, no scaling is required in that case.
	 */
	cpt->period = cpt->period >> cpt->prescaler_bits;

	if (cpt->callback != NULL) {
		cpt->callback(dev, channel, cpt->capture_period ? cpt->period : 0u,
				cpt->capture_pulse ? cpt->pulse : 0u, status, cpt->user_data);
	}
}

static int pwm_stm32_init(const struct device *dev)
{
	struct pwm_stm32_data *data = dev->data;
	const struct pwm_stm32_config *cfg = dev->config;
	TIM_TypeDef *timer = cfg->timer;
	const struct device *clk = DEVICE_DT_GET(STM32_CLOCK_CONTROL_NODE);
	uint32_t tim_clk;
	int r;

	/* Enable clock and store its speed */
	r = clock_control_on(clk, (clock_control_subsys_t)&cfg->pclken[0]);
	if (r < 0) {
		LOG_ERR("Could not initialize clock (%d)", r);
		return r;
	}

	if (cfg->pclk_len > 1) {
		/* Enable Timer clock source */
		r = clock_control_configure(clk, (clock_control_subsys_t)&cfg->pclken[1], NULL);
		if (r != 0) {
			LOG_ERR("Could not configure clock (%d)", r);
			return r;
		}

		r = clock_control_get_rate(clk, (clock_control_subsys_t)&cfg->pclken[1], &tim_clk);
		if (r < 0) {
			LOG_ERR("Timer clock rate get error (%d)", r);
			return r;
		}
	} else {
		LOG_ERR("Timer clock source is not specified");
		return -EINVAL;
	}

	data->tim_clk = tim_clk;

	/* Reset timer to default state using RCC */
	(void)reset_line_toggle_dt(&data->reset);

	/* configure pinmux */
	r = pinctrl_apply_state(cfg->pcfg, PINCTRL_STATE_DEFAULT);
	if (r < 0) {
		LOG_ERR("PWM pinctrl setup failed (%d)", r);
		return r;
	}

	/* initialize timer */
	LL_TIM_SetPrescaler(timer, cfg->prescaler);
	LL_TIM_SetAutoReload(timer, 0U);
	LL_TIM_EnableARRPreload(timer);

	if (IS_TIM_COUNTER_MODE_SELECT_INSTANCE(timer)) {
		LL_TIM_SetCounterMode(timer, cfg->countermode);
	}

	if (IS_TIM_CLOCK_DIVISION_INSTANCE(timer)) {
		LL_TIM_SetClockDivision(timer, LL_TIM_CLOCKDIVISION_DIV1);
	}

#ifdef IS_TIM_REPETITION_COUNTER_INSTANCE
	if (IS_TIM_REPETITION_COUNTER_INSTANCE(timer)) {
		LL_TIM_SetRepetitionCounter(timer, 0U);
	}
#endif

	if (IS_TIM_MASTER_INSTANCE(timer)) {
#if HAS_MASTERMODE_SUPPORT
		/* Preventing desynchronization between master and slave instances
		 * triggered by software update events (LL_TIM_GenerateEvent_UPDATE) during
		 * reconfiguration
		 */
		if (cfg->mastermode == LL_TIM_TRGO_UPDATE && is_center_aligned(cfg->countermode)) {
			LL_TIM_SetUpdateSource(timer, LL_TIM_UPDATESOURCE_COUNTER);
		}
#endif /* HAS_MASTERMODE_SUPPORT */
		ll_tim_set_trigger_output(timer, cfg->mastermode);
	} else {
		if (cfg->mastermode != 0) {
			LOG_ERR("%s: Timer does not support mastermode", dev->name);
			return -ENOTSUP;
		}
	}

	if (IS_TIM_SLAVE_INSTANCE(timer)) {
		LL_TIM_SetSlaveMode(timer, cfg->slavemode);
		LL_TIM_SetTriggerInput(timer, cfg->slave_trigger);
	} else {
		if (cfg->slavemode != LL_TIM_SLAVEMODE_DISABLED || cfg->slave_trigger != 0) {
			LOG_ERR("%s: Timer does not support slave mode", dev->name);
			return -ENOTSUP;
		}
	}

#ifdef IS_TIM_BREAK_INSTANCE
	/* Use the macro IS_TIM_BREAK_INSTANCE to check for supporting the
	 * break instance timers since some socs like L0/L1 will not
	 * compile and this checks explicitly for the api instead of the soc
	 */
	if (IS_TIM_BREAK_INSTANCE(timer)) {
		/* set the deadtime from the configuration */
		LL_TIM_OC_SetDeadTime(timer, cfg->deadtime);

		/* enable outputs and counter */
		LL_TIM_EnableAllOutputs(timer);
	} else if (cfg->deadtime != 0) {
		LOG_ERR("Setting deadtime %d on a non-break timer %s",
			cfg->deadtime, dev->name);
		return -ENOTSUP;
	}
#else
	if (cfg->deadtime != 0) {
		LOG_ERR("Setting deadtime %d on a non-break timer %s",
			cfg->deadtime, dev->name);
		return -ENOTSUP;
	}
#endif /* IS_TIM_BREAK_INSTANCE */

	LL_TIM_EnableCounter(timer);

#ifdef CONFIG_PWM_CAPTURE
	cfg->irq_config_func(dev);
#endif /* CONFIG_PWM_CAPTURE */

	return 0;
}
